# sprayHSI

./: .gitignore  CMakeLists.txt  CoolPropLiquid.cpp  CoolPropLiquid.h  FitLiquid.cpp  FitLiquid.h  LICENSE  Liquid.h  Meshing.h  README.md  RHSFunctor.cpp  RHSFunctor.h  Solver.cpp  Solver.h  SolverPhysics.cpp  main.cpp
BoundaryConditions/: BCGeneric.cpp  BCGeneric.h  Inlet.cpp  Inlet.h
Liquid/: FitLiquid.cpp  FitLiquid.h  Liquid.h
